# WeaselBotV2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_VISION.md  README.md  ROADMAP.md  SECURITY.md  compose.example.yml  config.example.yaml  pyproject.toml
.github/: patch_unified_quarantine_docs.py
.github/workflows/: apply-unified-quarantine.yml  temporary-arcadia-validation.yml
docs/: arcadia-quarantine-manifest.md  architecture.md  chaos-mode.md  decisions.md  deployment.md  organization-index-migration.md  ui-design.md  user-flows.md
lavalink/: application.example.yml
scripts/: sync_application_emojis.py
src/weasel_bot_v2/: __init__.py  __main__.py  bot.py  config.py  organization_index_migration.py
src/weasel_bot_v2/cogs/: __init__.py  admin.py  audio_status.py  debug.py  music.py  quarantine_admin.py
src/weasel_bot_v2/database/: __init__.py  schema.py  sqlite.py
src/weasel_bot_v2/models/: __init__.py  records.py
src/weasel_bot_v2/repositories/: __init__.py  guild_settings.py  (+8 more)
tests/: test_application_emojis.py  test_arcadia_quarantine.py  test_arcadia_quarantine_apply.py  test_audio_playback.py  test_bot_lavalink_status.py  test_config.py  test_control_center.py  test_database.py  test_debug_cog.py  test_local_library.py  test_my_ratings.py  test_now_playing_panel.py  test_organization_index_migration.py  test_play_all_policy.py  test_player_state.py  test_quarantine.py  test_quarantine_integrity.py  test_quarantine_layout.py  test_rating_skip_actions.py  test_ratings.py  test_repositories.py  test_voice_status.py
(+23 files in other folders)
